Rupture Disc + Survivalist's Toolkit Fixes + Steam Transport changes for fluid steam

--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -67,6 +67,9 @@ research.Tank.0=Pipes are great for transporting steam, but I've grown weary of 
 research.Pipe.name=Pipes
 research.Pipe.0=Steam is useless without a way to move it about but I've struggled to find a way to move it effectively.<br>Brass pipes are able to resist corrosion and thus make the perfect conduit for steam.
 research.Pipe.1=Combining a lever with a pipe allows me to toggle the flow of steam. Right clicking on this valve pipe will open or close the valve.
+research.RuptureDisc.name=Rupture Disc
+research.RuptureDisc.0=One too many times I've lost a valuable boiler or machine because its pressure was too high. This is where the rupture disc comes in.<br>To use the rupture disc, I simply place one on a machine or pipe that I fear may explode.
+research.RuptureDisc.1=It will pop before a critical pressure is reached, letting steam out. Of course, it will keep letting steam out until repaired by crafting with a zinc plate or right clicking with a zinc plate.
 research.Gauge.name=Steam Gauge
 research.Gauge.0=I've created a simple method for measuring steam within a conduit. I can simply slap on one of these to a boiler, pipe, tank, or other device and it will visually display the pressure, outputting a corresponding redstone signal to comparators.
 research.Heater.name=Steam Heater
@@ -247,3 +250,5 @@ tile.steamcraft:pump.name=Archimedes Screw
 tile.steamcraft:smasher.name=Rock Smasher
 tile.steamcraft:thumper.name=Thumper
 tile.steamcraft:flashBoiler.name=Flash Boiler Component
+tile.steamcraft:ruptureDisc.0.name=Rupture Disc
+tile.steamcraft:ruptureDisc.1.name=Burst Rupture Disc
