--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -98,6 +98,8 @@ research.Jetpack.name=Steam Jetpack
 research.Jetpack.0=I've developed a rather exciting exosuit upgrade that grants me the power of flight.<br>This steam 'jetpack' of sorts consumes a substantial amount of steam, but you can't put a price tag on flight.
 research.Wings.name=Steam Wings
 research.Wings.0=Now I can glide like a chicken, at no steam cost!<br>This steam powered chestpiece upgrade will deploy when I start falling too fast to slow my fall, but this can be disabled by hitting shift.
+research.Thrusters.name=Thrusters
+research.Thrusters.0=I have created a new exosuit upgrade for the legpiece to aid with movement.<br>These thrusters will increase my air movement speed, albeit at a steam cost. This lets me jump further and fly faster using a jetpack.
 research.Fist.name=Power Fist
 research.Fist.0=This chestpiece upgrade is one of my more fun inventions. It makes my punches pack a real... punch.<br>Any time I punch an enemy with a bare fist they'll go flying, at the cost of some steam.
 research.FallAssist.name=Fall Assist
