--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -88,7 +88,7 @@ research.Smasher.name=Rock Smasher
 research.Smasher.0=I've invented a machine that can smash ore in to smaller bits, sometimes exposing usable material that would otherwise be lost. To use the smashers, I place two opposing each other, one block apart. I can then put a block in the middle to smash.
 research.Thumper.name=Thumper
 research.Thumper.0=I need to think bigger. I've wasted my time working on manipulating small things like moving water or smashing rock...<br>No. I need to think on a grander scale. This is where the thumper comes in.
-research.Thumper.1=The thumper is able to fracture the very earth itself, slowly eroding a ravine below it. This ravine won't be exposed to the surface, and the destroyed rock and ore will remain there, so I must find another way to collect the spoils.
+research.Thumper.1=The thumper is able to fracture the very earth itself, slowly eroding a ravine below it. This ravine won't be exposed to the surface, and the destroyed rock and ore will remain there, so I must find another way to collect the spoils.<br>Eventually, the thumper will slow and stop fracturing all together. It should then be moved.
 
 category.Exosuit.name=Exosuit
 research.Exosuit.name=Exosuit
