--- a/src/main/resources/assets/steamcraft/lang/pt_BR.lang
+++ b/src/main/resources/assets/steamcraft/lang/pt_BR.lang
@@ -44,14 +44,14 @@ category.MetalCasting.name=Fundição de metal
 research.Crucible.name=Cadinho
 research.Crucible.0=I have finally found a way to create alloys out of various metals, the crucible!<br>To use it, I place the ceramic crucible over a hot fire. I can then toss in various types of processed metal, but not ores.
 research.Crucible.1=This metal will melt into a liquid, and form into alloys if possible. Right clicking on the crucible with an empty hand will pour this liquid metal into an adjacent mold.
-research.Mold.name=Mold Block
+research.Mold.name=molde de bloco
 research.Mold.0=The crucible is useless without a way to cast the melted metal into usable shapes. That's where molds come in.<br>Simply place a mold block with the open end facing a crucible.
 research.Mold.1=Right clicking the mold block will open or close it. Right clicking with a mold will place it in the mold block. The mold can be removed by shift right clicking.<br>To cast metal, I first close the mold and pour in liquid metal. Then, I open the mold and retrieve my casted metal.
 research.Molds.name=Moldes
 research.Molds.0=Molds can be placed in the mold block to set the output of the mold.<br>Right clicking with a carved or blank mold on a mold carver will change the mold type, cycling through all options.
 research.Brass.name=Latão
 research.Brass.0=I have created a new alloy that looks promising. Three parts copper and one part zinc creates brass, a shiny gold-like alloy.<br>Brass seems to resist corrosion, something that should prove useful.
-research.GildedGold.name=Aço banhado a ouro
+research.GildedGold.name=Aço Tratado
 research.GildedGold.0=I have found a way to combine the sturdy composition of iron with the magical capabilities of gold: gilding. I can coat iron ingots and tools with gold to combine their abilities.
 research.GildedGold.1=Simply right clicking on a crucible containing gold with an iron ingot will use up one nugget's worth of gold, leaving me with ingots that encompass the strength of iron and enchantability of gold.
 category.SteamPower.name=Poder do vapor
@@ -98,7 +98,7 @@ research.Jetpack.name=Jetpack a vapor
 research.Jetpack.0=I've developed a rather exciting exosuit upgrade that grants me the power of flight.<br>This steam 'jetpack' of sorts consumes a substantial amount of steam, but you can't put a price tag on flight.
 research.Wings.name=Asas a vapor
 research.Wings.0=Now I can glide like a chicken, at no steam cost!<br>This steam powered chestpiece upgrade will deploy when I start falling too fast to slow my fall, but this can be disabled by hitting shift.
-research.Thrusters.name=Motores
+research.Thrusters.name=Propulsores
 research.Thrusters.0=I have created a new exosuit upgrade for the legpiece to aid with movement.<br>These thrusters will increase my air movement speed, albeit at a steam cost. This lets me jump further and fly faster using a jetpack.
 research.Fist.name=Soco poderoso
 research.Fist.0=This chestpiece upgrade is one of my more fun inventions. It makes my punches pack a real... punch.<br>Any time I punch an enemy with a bare fist they'll go flying, at the cost of some steam.
@@ -125,47 +125,47 @@ itemGroup.steamcraft=FSP
 itemGroup.steamcraftTools=Ferramentas do FSP
 steamcraft.enhancementText=Melhorias:
 
-item.steamcraft:musketCartridge.name=Musket Cartridge
-item.steamcraft:musket.name=Flintlock Musket
-item.steamcraft:pistol.name=Flintlock Pistol
-item.steamcraft:revolver.name=Flintlock Revolver
-item.steamcraft:blunderbuss.name=Flintlock Blunderbuss
-item.steamcraft:blunderbussAblaze.name=Ablaze Flintlock Blunderbuss
-item.steamcraft:spyglass.name=Spyglass
-item.steamcraft:musketMarksman.name=Marksman's Flintlock Musket
-enhancement.steamcraft:musketMarksman=Marksman's Scope
-item.steamcraft:musketAblaze.name=Ablaze Flintlock Musket
+item.steamcraft:musketCartridge.name=Cartucho de mosquete
+item.steamcraft:musket.name=Mosquete
+item.steamcraft:pistol.name=Pistola de pederneira
+item.steamcraft:revolver.name=Revolver de pederneira
+item.steamcraft:blunderbuss.name=Blunderbuss
+item.steamcraft:blunderbussAblaze.name=Ablaze Blunderbuss
+item.steamcraft:spyglass.name=Luneta
+item.steamcraft:musketMarksman.name=Mosquete de precisão
+enhancement.steamcraft:musketMarksman=Luneta de precisão
+item.steamcraft:musketAblaze.name=Ablaze Musket
 enhancement.steamcraft:musketAblaze=Ablaze
-enhancement.steamcraft:revolver=Revolver Kit
+enhancement.steamcraft:revolver=Kit de revolveres
 
 item.steamcraft:exoArmorHead.name=Steam Exosuit Headpiece
 item.steamcraft:exoArmorBody.name=Steam Exosuit Chestpiece
 item.steamcraft:exoArmorLegs.name=Steam Exosuit Legpiece
 item.steamcraft:exoArmorFeet.name=Steam Exosuit Footpiece
 
-item.steamcraft:ingot.0.name=Copper Ingot
-item.steamcraft:ingot.1.name=Zinc Ingot
-item.steamcraft:ingot.2.name=Brass Ingot
-item.steamcraft:ingot.3.name=Gilded Iron Ingot
+item.steamcraft:ingot.0.name=Barra de cobre
+item.steamcraft:ingot.1.name=Barra de zinco
+item.steamcraft:ingot.2.name=Barra de latão
+item.steamcraft:ingot.3.name=Barra da aço tratado
 
-item.steamcraft:nugget.0.name=Copper Nugget
-item.steamcraft:nugget.1.name=Zinc Nugget
-item.steamcraft:nugget.2.name=Iron Nugget
-item.steamcraft:nugget.3.name=Brass Nugget
+item.steamcraft:nugget.0.name=Pepita de cobre
+item.steamcraft:nugget.1.name=Pepita de zinco
+item.steamcraft:nugget.2.name=Pepita de ferro
+item.steamcraft:nugget.3.name=Pepita de latão
 
-item.steamcraft:smashedOre.Iron.name=Smashed Iron Ore
-item.steamcraft:smashedOre.Gold.name=Smashed Gold Ore
-item.steamcraft:smashedOre.Copper.name=Smashed Copper Ore
-item.steamcraft:smashedOre.Zinc.name=Smashed Zinc Ore
-item.steamcraft:smashedOre.Tin.name=Smashed Tin Ore
-item.steamcraft:smashedOre.Nickel.name=Smashed Nickel Ore
-item.steamcraft:smashedOre.Silver.name=Smashed Silver Ore
-item.steamcraft:smashedOre.Lead.name=Smashed Lead Ore
-item.steamcraft:smashedOre.Aluminum.name=Smashed Aluminum Ore
-item.steamcraft:smashedOre.Osmium.name=Smashed Osmium Ore
-item.steamcraft:smashedOre.Cobalt.name=Smashed Cobalt Ore
-item.steamcraft:smashedOre.Ardite.name=Smashed Ardite Ore
-item.steamcraft:smashedOre.Cinnabar.name=Smashed Cinnabar Ore
+item.steamcraft:smashedOre.Iron.name=Minerio de ferro esmagado
+item.steamcraft:smashedOre.Gold.name=Minerio de ouro esmagado
+item.steamcraft:smashedOre.Copper.name=Minerio de cobre esmagado
+item.steamcraft:smashedOre.Zinc.name=Minerio de zinco esmagado
+item.steamcraft:smashedOre.Tin.name=Minerio de estanho
+item.steamcraft:smashedOre.Nickel.name=Minerio de nickel esmagado
+item.steamcraft:smashedOre.Silver.name=Minerio de prata esmagado
+item.steamcraft:smashedOre.Lead.name=Minerio de chumbo esmagado
+item.steamcraft:smashedOre.Aluminum.name=Minerio de aluminio esmagado
+item.steamcraft:smashedOre.Osmium.name=Minerio de osmio esmagado
+item.steamcraft:smashedOre.Cobalt.name=Minerio de cobalto esmagado
+item.steamcraft:smashedOre.Ardite.name=Minerio de ardita esmagado
+item.steamcraft:smashedOre.Cinnabar.name=Minerio de cinnabar esmagado
 
 item.steamcraft:smashedOre.PoorIron.name=Smashed Poor Iron Ore
 item.steamcraft:smashedOre.PoorGold.name=Smashed Poor Gold Ore
@@ -173,24 +173,24 @@ item.steamcraft:smashedOre.PoorCopper.name=Smashed Poor Copper Ore
 item.steamcraft:smashedOre.PoorZinc.name=Smashed Poor Zinc Ore
 item.steamcraft:smashedOre.PoorTin.name=Smashed Poor Tin Ore
 
-item.steamcraft:crafting.0.name=Brass Piston
-item.steamcraft:crafting.1.name=Wooden Stock
-item.steamcraft:crafting.2.name=Iron Barrel
-item.steamcraft:crafting.3.name=Blunderbuss Barrel
-item.steamcraft:crafting.4.name=Flintlock
-item.steamcraft:crafting.5.name=Brass Turbine
+item.steamcraft:crafting.0.name=Pistão de latão
+item.steamcraft:crafting.1.name=Coronha de madeira
+item.steamcraft:crafting.2.name=Cano de ferro
+item.steamcraft:crafting.3.name=cano de Blunderbuss
+item.steamcraft:crafting.4.name=Pederneira
+item.steamcraft:crafting.5.name=Turbina de latão
 
-item.steamcraft:plate.0.name=Copper Plate
-item.steamcraft:plate.1.name=Zinc Plate
-item.steamcraft:plate.2.name=Iron Plate
-item.steamcraft:plate.3.name=Gold Plate
-item.steamcraft:plate.4.name=Brass Plate
-item.steamcraft:plate.5.name=Thaumium Plate
+item.steamcraft:plate.0.name=Chapa de cobre
+item.steamcraft:plate.1.name=Chapa de zinco
+item.steamcraft:plate.2.name=Chapa de ferro
+item.steamcraft:plate.3.name=Chapa de ouro
+item.steamcraft:plate.4.name=Chapa de latão
+item.steamcraft:plate.5.name=Chapa de thaumium
 
-item.steamcraft:ingotMold.name=Ingot Mold
-item.steamcraft:nuggetMold.name=Nugget Mold
-item.steamcraft:plateMold.name=Plate Mold
-item.steamcraft:blankMold.name=Blank Mold
+item.steamcraft:ingotMold.name=Molde de barra
+item.steamcraft:nuggetMold.name=Molde de pepita
+item.steamcraft:plateMold.name=Molde de chapa
+item.steamcraft:blankMold.name=Molde em branco
 
 item.steamcraft:helmGildedGold.name=Gilded Iron Helmet
 item.steamcraft:chestGildedGold.name=Gilded Iron Chestplate
@@ -214,50 +214,50 @@ item.steamcraft:shovelBrass.name=Brass Shovel
 item.steamcraft:hoeBrass.name=Brass Hoe
 item.steamcraft:swordBrass.name=Brass Sword
 
-item.steamcraft:steamDrill.name=Steam Drill
-item.steamcraft:steamAxe.name=Steam Saw
-item.steamcraft:steamShovel.name=Steam Shovel
-item.steamcraft:astrolabe.name=Astrolabe
+item.steamcraft:steamDrill.name=Furadeira a vapor
+item.steamcraft:steamAxe.name=Serra a vapor
+item.steamcraft:steamShovel.name=Pá a vapor
+item.steamcraft:astrolabe.name=Astrolabio
 
-item.steamcraft:survivalist.name=Survivalist's Toolkit
+item.steamcraft:survivalist.name=Kit de ferramentas de sobrevivencia
 
-item.steamcraft:powerFist.name=Power Fist
-item.steamcraft:fallAssist.name=Fall Assist
-item.steamcraft:jetpack.name=Steam Jetpack
-item.steamcraft:wings.name=Steam Wings
-item.steamcraft:goggleUpgrade.name=Mask of Revealing
-item.steamcraft:floralLaurel.name=Floral Laurel
-item.steamcraft:thrusters.name=Thrusters
+item.steamcraft:powerFist.name=Soco poderoso
+item.steamcraft:fallAssist.name=Botas de queda
+item.steamcraft:jetpack.name=Jetpack a vapor
+item.steamcraft:wings.name=Asas a vapor
+item.steamcraft:goggleUpgrade.name=Mascara da revelação
+item.steamcraft:floralLaurel.name=Laureu floral
+item.steamcraft:thrusters.name=Propulsores
 
-item.steamcraft:steamedChicken.name=Steamed Chicken
-item.steamcraft:steamedBeef.name=Steamed Beef
-item.steamcraft:steamedFish.name=Steamed Fish
-item.steamcraft:steamedPorkchop.name=Steamed Porkchop
+item.steamcraft:steamedChicken.name=Galinha cosida
+item.steamcraft:steamedBeef.name=Carne cosida
+item.steamcraft:steamedFish.name=Peixe cosido
+item.steamcraft:steamedPorkchop.name=Bisteca cosida
 
-tile.steamcraft:blockBrass.name=Block of Brass
-tile.steamcraft:blockCopper.name=Block of Copper
-tile.steamcraft:blockZinc.name=Block of Zinc
+tile.steamcraft:blockBrass.name=Bloco de latão
+tile.steamcraft:blockCopper.name=Bloco de cobre
+tile.steamcraft:blockZinc.name=Bloco de zinco
 
-tile.steamcraft:charger.name=Steam Filler
-tile.steamcraft:crucible.name=Crucible
-tile.steamcraft:mold.name=Mold
-tile.steamcraft:pipe.name=Pipe
-tile.steamcraft:valvePipe.name=Valve Pipe
-tile.steamcraft:boiler.name=Boiler
-tile.steamcraft:heater.name=Steam Heater
-tile.steamcraft:ore.0.name=Copper Ore
-tile.steamcraft:ore.1.name=Zinc Ore
-tile.steamcraft:ore.2.name=Poor Zinc Ore
-tile.steamcraft:carving.name=Carving Table
-tile.steamcraft:engineering.name=Engineering Table
-tile.steamcraft:tank.0.name=Steam Tank
-tile.steamcraft:tank.1.name=Creative Steam Tank
-tile.steamcraft:meter.name=Steam Gauge
-tile.steamcraft:hammer.name=Steam Hammer
-tile.steamcraft:itemMortar.name=Item Mortar
-tile.steamcraft:pump.name=Archimedes Screw
-tile.steamcraft:smasher.name=Rock Smasher
-tile.steamcraft:thumper.name=Thumper
-tile.steamcraft:flashBoiler.name=Flash Boiler Component
-tile.steamcraft:ruptureDisc.0.name=Rupture Disc
-tile.steamcraft:ruptureDisc.1.name=Burst Rupture Disc
+tile.steamcraft:charger.name=Preenchedor a vapor
+tile.steamcraft:crucible.name=Cadinho
+tile.steamcraft:mold.name=Molde
+tile.steamcraft:pipe.name=Cano
+tile.steamcraft:valvePipe.name=Cano com valvula
+tile.steamcraft:boiler.name=Caldeira
+tile.steamcraft:heater.name=Aquedor a vapor
+tile.steamcraft:ore.0.name=Minerio de cobre
+tile.steamcraft:ore.1.name=Minerio de zinco
+tile.steamcraft:ore.2.name=Minerio de zinco pobre
+tile.steamcraft:carving.name=Mesa de gravação
+tile.steamcraft:engineering.name=Mesa de engenharia
+tile.steamcraft:tank.0.name=Tanque de vapor
+tile.steamcraft:tank.1.name=Tanque de vapor do modo criativo
+tile.steamcraft:meter.name=Valvula de vapor
+tile.steamcraft:hammer.name=Martelo de vapor
+tile.steamcraft:itemMortar.name=Morteiro de itens
+tile.steamcraft:pump.name=Parafuso de archimedes
+tile.steamcraft:smasher.name=Quebra pedras
+tile.steamcraft:thumper.name=Ariete
+tile.steamcraft:flashBoiler.name=Peça de caldeira rapida
+tile.steamcraft:ruptureDisc.0.name=Disco de ruptura
+tile.steamcraft:ruptureDisc.1.name=Disco de ruptura rompido
