--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -261,3 +261,4 @@ tile.steamcraft:thumper.name=Thumper
 tile.steamcraft:flashBoiler.name=Flash Boiler Component
 tile.steamcraft:ruptureDisc.0.name=Rupture Disc
 tile.steamcraft:ruptureDisc.1.name=Burst Rupture Disc
+tile.steamcraft:fan.name=Fan
