--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -2,6 +2,8 @@ steamcraft.book.index=Index
 steamcraft.book.info=A brief guide to steam power.
 steamcraft.book.by=by
 steamcraft.book.shapeless=Shapeless
+steamcraft.book.clickme=Click to go to crafting
+steamcraft.book.shiftright=Control click to go to information
 item.steamcraft:book.name=Esteemed Innovation
 potion.partialInvisible=Cloaking
 steamcraft.plate.bonus=Exosuit Effect: 
@@ -73,6 +75,8 @@ research.FlashBoiler.0=I find myself needing more and more boilers as my steam u
 research.FlashBoiler.1=The flash boiler is constructed by placing its components in a 2x2x2 cube shape. I can then start to power it. The flash boiler consumes water and fuel at a rate tenfold that of the basic boiler, but its output is also tenfold. The flash boiler requires time to heat up, and will not produce steam as quickly or as efficiently until warmed up.
 research.Tank.name=Tanks
 research.Tank.0=Pipes are great for transporting steam, but I've grown weary of refilling the boiler every time I need more. I've created tanks to remedy this problem. They store large amounts of steam, so I can save some for later.
+research.CreativeTank.name=sekrit page
+research.CreativeTank.0=u find sekrit
 research.Pipe.name=Pipes
 research.Pipe.0=Steam is useless without a way to move it about but I've struggled to find a way to move it effectively.<br>Brass pipes are able to resist corrosion and thus make the perfect conduit for steam.
 research.Pipe.1=Combining a lever with a pipe allows me to toggle the flow of steam. Right clicking on this valve pipe will open or close the valve.
@@ -104,8 +108,22 @@ research.Exosuit.name=Exosuit
 research.Exosuit.0=I've been able to manipulate the world to my desire using the power of steam... What left is there to improve but me?<br>This is where my exosuit comes in, a versatile armor set powered by steam.
 research.Exosuit.1=Upgrades can be placed in the suit using an engineering table. First things first, I need to place a steam tank in the cuboid shaped slot in the exosuit chestpiece. I then can fill the chestpiece with steam.<br>A full set of exosuit parts will provide a small mining and speed boost, but without steam I will be slowed.
 research.ExoPlates.name=Exosuit Plates
-research.ExoPlates.0=The exosuit on its own is a fragile framework for upgrades. One of the most critical upgrades is plates. Various types of plating can be installed in the exosuit, providing the wearer with siginificantly more protection. All plates provide an equal baseline of protection, similar to that of iron armor, but each plate provides a unique proficiency.
-
+research.ExoPlates.0=The exosuit on its own is a fragile framework for upgrades. One of the most critical upgrades is plates. Various types of plating can be installed in the exosuit, providing the wearer with siginificantly more protection.
+research.ExoPlates.1=All plates provide an equal baseline of protection, equivalent to that of iron armor, but each plate provides a unique proficiency. Iron plating, for example, is better at protecting against projectiles.
+research.PlateCopper.name=Copper Plate
+research.PlateCopper.0=I've found that installing copper plates in my exosuit helps to protect me from explosive damage. This exosuit plate is particularly useful for confrontations with creepers and ghasts.
+research.PlateIron.name=Iron Plate
+research.PlateIron.0=While experimenting with different plating materials, I've found that iron is useful at stopping fast-moving projectiles. The density of iron provides a little extra protection against ranged foes such as skeletons.
+research.PlateBrass.name=Brass Plate
+research.PlateBrass.0=I've found that brass used as a plating material helps to insulate my body from extreme heat. Brass plates are a useful for caving or expeditions to the Nether, as it can buy me a few seconds after falling into lava.
+research.PlateGold.name=Gold Plate
+research.PlateGold.0=While exosuits can't be enchanted, the magical potential of gold can be harnessed in a different way. While wearing gold-plated exosuit parts, all the experience points I gain will be increased.
+research.PlateThaumium.name=Thaumium Plate
+research.PlateThaumium.0=Plating my exosuit with thaumium augments the already powerful abilities of the suit with a vis discount comparable my thaumaturge's robes. Now I can use one suit for steam tinkering and thaumaturgy.
+research.PlateTerrasteel.name=Terrasteel Plate
+research.PlateTerrasteel.0=I wasn't sure combining my powerful botanical creations with my exosuit was a good idea... Until I tried plating the suit with terrasteel! Terrasteel plates increase my maximum health, although less than terrasteel armor itself would.
+research.PlateElementium.name=Elementium Plate
+research.PlateElementium.0=This elven metal works wonderfully with the exosuit. Plating my exosuit with elementium will spawn pixies to aid me when hurt, although less often than elementium armor. I must ask the elves if they have exosuits in Alfheim...
 research.Jetpack.name=Steam Jetpack
 research.Jetpack.0=I've developed a rather exciting exosuit upgrade that grants me the power of flight.<br>This steam 'jetpack' of sorts consumes a substantial amount of steam, but you can't put a price tag on flight.
 research.Wings.name=Steam Wings
@@ -242,6 +260,10 @@ item.steamcraft:wings.name=Steam Wings
 item.steamcraft:goggleUpgrade.name=Mask of Revealing
 item.steamcraft:floralLaurel.name=Floral Laurel
 item.steamcraft:thrusters.name=Thrusters
+item.steamcraft:runAssist.name=Modular Accelerator
+item.steamcraft:doubleJump.name=Pulse Nozzle
+item.steamcraft:jumpAssist.name=Leap Actuator
+item.steamcraft:stealthUpgrade.name=Acoustic Dampener
 
 item.steamcraft:steamedChicken.name=Steamed Chicken
 item.steamcraft:steamedBeef.name=Steamed Beef
