--- a/src/main/resources/assets/steamcraft/lang/en_US.lang
+++ b/src/main/resources/assets/steamcraft/lang/en_US.lang
@@ -6,6 +6,7 @@ steamcraft.book.clickme=Click to go to crafting
 steamcraft.book.shiftright=Control click to go to information
 item.steamcraft:book.name=Esteemed Innovation
 potion.partialInvisible=Cloaking
+
 steamcraft.plate.bonus=Exosuit Effect: 
 steamcraft.plate.copper=Blast Protection
 steamcraft.plate.brass=Fire Protection
@@ -14,6 +15,9 @@ steamcraft.plate.gold=Extra Experience
 steamcraft.plate.thaumium=Vis Discount
 steamcraft.plate.terrasteel=Increased Health
 steamcraft.plate.elementum=Spawns Pixies
+steamcraft.plate.fiery=Fiery Aura
+steamcraft.plate.yeti=Chill Aura
+steamcraft.plate.sadist=Gain LP When Hurt
 
 steamcraft.astrolabe.target=Target:
 steamcraft.astrolabe.noTarget=No target
@@ -110,20 +114,27 @@ research.Exosuit.1=Upgrades can be placed in the suit using an engineering table
 research.ExoPlates.name=Exosuit Plates
 research.ExoPlates.0=The exosuit on its own is a fragile framework for upgrades. One of the most critical upgrades is plates. Various types of plating can be installed in the exosuit, providing the wearer with siginificantly more protection.
 research.ExoPlates.1=All plates provide an equal baseline of protection, equivalent to that of iron armor, but each plate provides a unique proficiency. Iron plating, for example, is better at protecting against projectiles.
-research.PlateCopper.name=Copper Plate
+research.PlateCopper.name=Copper Exosuit Plate
 research.PlateCopper.0=I've found that installing copper plates in my exosuit helps to protect me from explosive damage. This exosuit plate is particularly useful for confrontations with creepers and ghasts.
-research.PlateIron.name=Iron Plate
+research.PlateIron.name=Iron Exosuit Plate
 research.PlateIron.0=While experimenting with different plating materials, I've found that iron is useful at stopping fast-moving projectiles. The density of iron provides a little extra protection against ranged foes such as skeletons.
-research.PlateBrass.name=Brass Plate
+research.PlateBrass.name=Brass Exosuit Plate
 research.PlateBrass.0=I've found that brass used as a plating material helps to insulate my body from extreme heat. Brass plates are a useful for caving or expeditions to the Nether, as it can buy me a few seconds after falling into lava.
-research.PlateGold.name=Gold Plate
+research.PlateGold.name=Gold Exosuit Plate
 research.PlateGold.0=While exosuits can't be enchanted, the magical potential of gold can be harnessed in a different way. While wearing gold-plated exosuit parts, all the experience points I gain will be increased.
-research.PlateThaumium.name=Thaumium Plate
+research.PlateThaumium.name=Thaumium Exosuit Plate
 research.PlateThaumium.0=Plating my exosuit with thaumium augments the already powerful abilities of the suit with a vis discount comparable my thaumaturge's robes. Now I can use one suit for steam tinkering and thaumaturgy.
-research.PlateTerrasteel.name=Terrasteel Plate
+research.PlateTerrasteel.name=Terrasteel Exosuit Plate
 research.PlateTerrasteel.0=I wasn't sure combining my powerful botanical creations with my exosuit was a good idea... Until I tried plating the suit with terrasteel! Terrasteel plates increase my maximum health, although less than terrasteel armor itself would.
-research.PlateElementium.name=Elementium Plate
+research.PlateElementium.name=Elementium Exosuit Plate
 research.PlateElementium.0=This elven metal works wonderfully with the exosuit. Plating my exosuit with elementium will spawn pixies to aid me when hurt, although less often than elementium armor. I must ask the elves if they have exosuits in Alfheim...
+research.PlateFiery.name=Fiery Exosuit Plate
+research.PlateFiery.0=I've been able to adapt the deadly fiery magic of the Twilight Forest's Hydra and Ur-Ghast for use in my exosuit. Just like fiery armor, fiery exosuit plates have a chance of lighting foes aflame when hit.
+research.PlateYeti.name=Yeti Hide
+research.PlateYeti.0=My dangerous treks to the snowy ends of the Twilight Forest have rewarded me with valuable alpha yeti fur, which I can stitch together and install in my exosuit to freeze my foes in place if they dare to attack me.
+research.PlateSadist.name=Sadistic Exosuit Plate
+research.PlateSadist.0=Combining a few reinforced slates with a rune of self-sacrifice creates a rather powerful exosuit plate. This plate, when installed, adds a small amount of LP to my network whenever I take damage, rewarding me for pain.
+
 research.Jetpack.name=Steam Jetpack
 research.Jetpack.0=I've developed a rather exciting exosuit upgrade that grants me the power of flight.<br>This steam 'jetpack' of sorts consumes a substantial amount of steam, but you can't put a price tag on flight.
 research.Wings.name=Steam Wings
@@ -218,6 +229,19 @@ item.steamcraft:plate.4.name=Brass Plate
 item.steamcraft:plate.5.name=Thaumium Plate
 item.steamcraft:plate.6.name=Terrasteel Plate
 item.steamcraft:plate.7.name=Elementium Plate
+item.steamcraft:plate.8.name=Fiery Plate
+
+item.steamcraft:exosuitPlate.0.name=Copper Exosuit Plate
+item.steamcraft:exosuitPlate.1.name=Zinc Exosuit Plate
+item.steamcraft:exosuitPlate.2.name=Iron Exosuit Plate
+item.steamcraft:exosuitPlate.3.name=Gold Exosuit Plate
+item.steamcraft:exosuitPlate.4.name=Brass Exosuit Plate
+item.steamcraft:exosuitPlate.5.name=Thaumium Exosuit Plate
+item.steamcraft:exosuitPlate.6.name=Terrasteel Exosuit Plate
+item.steamcraft:exosuitPlate.7.name=Elementium Exosuit Plate
+item.steamcraft:exosuitPlate.8.name=Fiery Exosuit Plate
+item.steamcraft:exosuitPlate.9.name=Yeti Hide
+item.steamcraft:exosuitPlate.10.name=Sadistic Exosuit Plate
 
 item.steamcraft:ingotMold.name=Ingot Mold
 item.steamcraft:nuggetMold.name=Nugget Mold
