--- a/src/main/resources/assets/steamcraft/lang/de_DE.lang
+++ b/src/main/resources/assets/steamcraft/lang/de_DE.lang
@@ -1,3 +1,4 @@
+steamcraft.book.index=Index
 steamcraft.book.info=Leitfaden zum Dampfbetrieb
 steamcraft.book.by=von
 steamcraft.book.shapeless=Formlos
